--- a/src/main/resources/public/login.html
+++ b/src/main/resources/public/login.html
@@ -7,9 +7,43 @@
 <body>
     <h1>业务系统登录</h1>
     <form action="/login" method="post">
-        <span>用户名</span><input type="text" name="username"/> <br>
-        <span>密码</span><input type="password" name="password"/> <br>
-        <input type="submit" value="登录">
+        <span>用户</span><input type="text" name="username" id="username"/> <br>
+        <span>密码</span><input type="password" name="password" id="password"/> <br>
+        <input type="button" onclick="login()" value="登录">
+        <label><input type="checkbox" name="remember-me"/>记住密码</label>
     </form>
+
+    <script src="https://cdn.staticfile.org/jquery/1.12.3/jquery.min.js"></script>
+    <script>
+        function login(){
+            var username = $("#username").val();
+            var password = $("#password").val();
+            var rememberMe = $("#remember-me").is(":checked");
+            if (username === "" || password === "") {
+                alert("用户名或密码不能为空");
+                return;
+            }
+            $.ajax({
+                type: "POST",
+                url: "/login",
+                data: {
+                    "username": username,
+                    "password": password,
+                    "remember-me": rememberMe
+                },
+                success: function(json){
+                    if (json.code === 200) {
+                        location.href = json.data;
+                    }else{
+                        alert(json.message);
+                    }
+                },
+                error: function(error){
+                    console.log(e.responseText)
+                }
+            })
+        }
+    </script>
+
 </body>
 </html>
