--- a/src/main/resources/public/login.html
+++ b/src/main/resources/public/login.html
@@ -9,15 +9,25 @@
     <form action="/login" method="post">
         <span>用户</span><input type="text" name="username" id="username"/> <br>
         <span>密码</span><input type="password" name="password" id="password"/> <br>
+        <span>验证码</span><input type="text" name="captchaCode" id="captchaCode"/> <br>
+        <img src="/kaptcha" id="kaptcha" width="110px" height="40px"/> <br>
         <input type="button" onclick="login()" value="登录">
         <label><input type="checkbox" name="remember-me"/>记住密码</label>
     </form>
 
     <script src="https://cdn.staticfile.org/jquery/1.12.3/jquery.min.js"></script>
     <script>
+        window.onload = function(){
+            var kaptchaImg = document.getElementById("kaptcha");
+
+            kaptchaImg.onclick = function(event){
+                kaptchaImg.src = "/kaptcha?" + Math.floor(Math.random() * 100)
+            }
+        }
         function login(){
             var username = $("#username").val();
             var password = $("#password").val();
+            var captchaCode = $("#captchaCode").val();
             var rememberMe = $("#remember-me").is(":checked");
             if (username === "" || password === "") {
                 alert("用户名或密码不能为空");
@@ -29,6 +39,7 @@
                 data: {
                     "username": username,
                     "password": password,
+                    "captchaCode": captchaCode,
                     "remember-me": rememberMe
                 },
                 success: function(json){
