--- a/username-server/src/main/resources/public/login.html
+++ b/username-server/src/main/resources/public/login.html
@@ -12,7 +12,7 @@
         <span>验证码</span><input type="text" name="captchaCode" id="captchaCode"/> <br>
         <img src="/kaptcha" id="kaptcha" width="110px" height="40px"/> <br>
         <input type="button" onclick="login()" value="登录">
-        <label><input type="checkbox" name="remember-me"/>记住密码</label>
+        <label><input type="checkbox" name="remember-me" id="remember-me"/>记住密码</label>
     </form>
 
     <script src="https://cdn.staticfile.org/jquery/1.12.3/jquery.min.js"></script>
@@ -40,7 +40,7 @@
                     "username": username,
                     "password": password,
                     "captchaCode": captchaCode,
-                    "remember-me": rememberMe
+                    "remember-me-new": rememberMe
                 },
                 success: function(json){
                     if (json.code === 200) {
